@@ -7,9 +7,9 @@
 # keep this aligned with SVN update version
 # major revision is the SVN update, minor revision is an internal build number which
 # can be used to keep track of different version which are not submitted to SVN
-buildversion=362.01
+buildversion=363.01
 stname=semanticturkey
-stpom.version=0.9.0-SNAPSHOT
+stpom.version=0.9.0
 
 # ---- Modules -----------------------------------------------------------------
 
