@@ -4,7 +4,7 @@
 	<groupId>it.uniroma2.art.semanticturkey</groupId>
 	<artifactId>semanticturkey</artifactId>
 	<name>Semantic Turkey</name>
-	<version>0.9.0-SNAPSHOT</version>
+	<version>0.9.0</version>
 	<packaging>pom</packaging>
 	<description>Semantic Turkey parent project. It contains the three modules about: core business logic, core services and firefox extension (ui and client in general) of the system. Three additional modules provide an implementation for the ontology manager to be bundled with the tool, an applet for graph visualization of ontologies and concept schemes and a test suite to run tests on a java client framework.
 An ANT build file allows to package the xpi for Firefox installation (read README2BUILD.TXT file for info)</description>
@@ -106,11 +106,11 @@ An ANT build file allows to package the xpi for Firefox installation (read READM
 
 		<module>st-codegen-annotations</module>
 		<module>st-codegen-processor</module>
-		<module>st-launcher</module>
 		<module>st-core-framework</module>
 		<module>st-core-services</module>
 		<module>st-graph-applet</module>
 		<module>st-sesame2-ontmanager</module>
+		<module>st-launcher</module>
 		<module>st-firefox-ext</module>
 	</modules>
 
